tests/syntax_errors/method_receiver_missing_colon.out
error: method_receiver_missing_colon.li 2,7: unexpected token `Num`, expecting `colon`
    2 | fn (n Num) f() {}
      |       ^^^
